--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <img src="IMG/music_logo.png" alt="Музыка">
 
-            <div class="btn_search"></div>asd
+            <div class="btn_search"></div>
             <div class="navbar_panel">
                 <a href="">HOME</a>
                 <a href="">PRODUCT</a>
