--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
 
     <!-- header_navbar block end -->
 
+    <div class="content_wrapper_1">
+
+        <div class="content_block_1">
+
+            
+
+        </div>
+
+    </div>
+
 
 </body>
 </html>
