flex-box-navbar

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 
             <img src="IMG/music_logo.png" alt="Музыка">
 
-            <div class="btn_search"></div>
-            <div class="navbar_panel">
-                <a href="">HOME</a>
-                <a href="">PRODUCT</a>
-                <a href="">PROMO</a>
-                <a href="">ABOUT</a>
-                <a href="">CONTACT</a>
+            <div class="navbar_container">
+                <nav>
+                    <a href="">HOME</a>
+                    <a href="">PRODUCT</a>
+                    <a href="">PROMO</a>
+                    <a href="">ABOUT</a>
+                    <a href="">CONTACT</a>
+                </nav>
             </div>
+            <div class="btn_search"></div>
 
         </div>
 
@@ -62,9 +64,11 @@
 
     <div class="content_wrapper_1">
 
-        <div class="content_block_1">
+        <div class="content_container_1">
 
-            
+            <h1>Dance Tour</h1>
+
+            <p></p>
 
         </div>
 
